--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
 }
 
 body{
@@ -119,13 +120,14 @@ table{
 }
 
 th{
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     border: 1px solid black;
     background-color: white;
 }
 
 td{
     border: 1px solid black;
+    font-size: 1.2rem;
     padding: 5px;
     background-color: white;
 }
