--- a/style.css
+++ b/style.css
@@ -131,3 +131,14 @@ td{
     padding: 5px;
     background-color: white;
 }
+
+.sav{
+    display: flex;
+    justify-content: center;
+    margin-top: 2%;
+}
+
+.ok{
+    font-size: 1.5rem;
+    display: none;
+}
